scripts/iptables
/* /etc/sysconfig/iptables on ceres */

*filter
:INPUT DROP [4:524]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [1547:458027]
-A INPUT -i lo -j ACCEPT
-A INPUT -s 24.22.37.138/32 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 42422 -j ACCEPT
-A INPUT -s 204.11.192.0/24 -p udp -m udp --dport 5060:5080 -j ACCEPT
-A INPUT -s 204.11.192.0/24 -p udp -m udp --dport 10000:20000 -j ACCEPT
-A INPUT -s 66.193.176.35/32 -p udp -m udp --dport 5060:5080 -j ACCEPT
-A INPUT -s 66.193.176.35/32 -p udp -m udp --dport 10000:20000 -j ACCEPT
-A INPUT -s 66.193.176.54/32 -p udp -m udp --dport 5060:5080 -j ACCEPT
-A INPUT -s 66.193.176.54/32 -p udp -m udp --dport 10000:20000 -j ACCEPT
-A INPUT -s 66.193.176.58/32 -p udp -m udp --dport 5060:5080 -j ACCEPT
-A INPUT -s 66.193.176.58/32 -p udp -m udp --dport 10000:20000 -j ACCEPT
-A INPUT -s 66.54.140.46/32 -p udp -m udp --dport 5060:5080 -j ACCEPT
-A INPUT -s 66.54.140.47/32 -p udp -m udp --dport 5060:5080 -j ACCEPT
-A INPUT -s 66.54.140.46/32 -p udp -m udp --dport 10000:20000 -j ACCEPT
-A INPUT -s 66.54.140.47/32 -p udp -m udp --dport 10000:20000 -j ACCEPT
COMMIT
